--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <canvas id="root" class="root"></canvas>
+  <script src="utils.js"></script>
   <script src="car.js"></script>
+  <script src="road.js"></script>
   <script src="controls.js"></script>
   <script src="main.js"></script>
 </body>
