--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <canvas id="root" class="root"></canvas>
+  <script src="constants.js"></script>
   <script src="utils.js"></script>
   <script src="sensor.js"></script>
   <script src="car.js"></script>
