Create neural network

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <canvas id="root" class="root"></canvas>
+  <canvas id="root"></canvas>
   <script src="constants.js"></script>
   <script src="utils.js"></script>
+  <script src="network.js"></script>
   <script src="sensor.js"></script>
   <script src="car.js"></script>
   <script src="road.js"></script>
