--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <canvas id="root"></canvas>
+  <div class="toolbar">
+    <button onclick="save()">💾</button>
+    <button onclick="discard()">🗑️</button>
+  </div>
   <script src="constants.js"></script>
   <script src="utils.js"></script>
   <script src="network.js"></script>
